@@ -19,6 +19,7 @@ CHANGELOG Roundcube Webmail
 - Workaround PHP issue by calling closelog() on script shutdown when using log_driver=syslog (#5289)
 - Fix so upgrade script makes sure program/lib directory does not contain old libraries (#5287)
 - Fix subscription checkbox state on error in folder subscribe/unsubscribe action (#5243)
+- Fix bug where microsecond format in logged date didn't work in some cases
 
 RELEASE 1.2.0
 -------------
